internal/mkdocs-testing/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wiki-internal
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wiki.local.chriggle.com`)
      kind: Rule
      services:
        - name: wiki-internal
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: local-chriggle-com-tls
